fixed buttons spacing, login page

--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -25,6 +25,7 @@ p{
 }
 table{
     font-size:14px;
+    width: 50%;
 }
 .calendar h2{
     color:#68838b;
