--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -3,9 +3,44 @@ h1, div {
   text-align: center;
   z-index: 0
 }
+button{
+  margin-right:0px;
+  margin-top: 5px;
+  float:right;
+}
+p{
+  font-size:12px;
+  color:silver;
+}
+a{
+  color:#62B4A7;
+}
+#login-image{
+  height:200px;
+  background: url("../../assets/images/login.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  line-height: 200px;
+  color:white;
+  font-size: 40px;
+}
 form {
-  width: 200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin:auto;
+  padding:20px;
+  background-color: #fafafa;
   z-index: 0
+}
+h2{
+  color:#62B4A7;
+  margin:auto;
+  padding:10px 20px;
+  background-color: #fafafa;
+}
+.login-wrapper{
+  width: 45%;
+  margin: auto;
+  padding:3%;
+  background-color: #fafafa;
+  min-height: 700px;
 }
