--- a/client/src/app/registration/registration.component.css
+++ b/client/src/app/registration/registration.component.css
@@ -4,6 +4,7 @@
 }
 button{
     margin-right:0px;
+    margin-top: 5px;
     float:right;
 }
 p{
